# ewfm

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE.txt  README.md  environment.yaml  pyproject.toml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  model_checkpoint.yaml
configs/data/: dummy.yaml
configs/energy/: dw4.yaml  gmm.yaml  lj13.yaml  lj55.yaml
configs/experiment/: dw4.yaml  gmm.yaml  lj13.yaml  lj55.yaml
configs/logger/: wandb.yaml
configs/model/: ewfm.yaml
configs/model/net/: egnn.yaml  mlp.yaml
configs/paths/: default.yaml
ewfm/: eval.py  train.py
ewfm/energies/: base_energy_function.py  gmm_energy.py  lennardjones_energy.py  multi_double_well_energy.py
ewfm/models/: ewfm_module.py
ewfm/models/components/: base_prior.py  egnn.py  mlp.py
ewfm/utils/: __init__.py  data_utils.py  instantiators.py  logging_utils.py  rich_utils.py  utils.py
pipelines/a_ewfm/dw4/: seed42.sbatch  seed43.sbatch  seed44.sbatch
pipelines/a_ewfm/gmm/: seed42.sbatch  seed43.sbatch  seed44.sbatch
pipelines/a_ewfm/lj13/: seed42-final_a100.sbatch  seed43-final_a100.sbatch  seed44-final_a100.sbatch
pipelines/a_ewfm/lj55/: seed42.sbatch  seed44.sbatch  seed45.sbatch
pipelines/ewfm/dw4_99p9/: seed42.sbatch  seed43.sbatch  seed44.sbatch
pipelines/ewfm/gmm/: seed42.sbatch  seed43.sbatch  seed44.sbatch
pipelines/ewfm/lj13/: seed42-final_a100.sbatch  seed43-final_a100.sbatch  seed44-final_a100.sbatch
pipelines/i_ewfm/dw4/: seed42.sbatch  seed43.sbatch  seed44.sbatch
pipelines/i_ewfm/gmm/: seed42.sbatch  (+2 more)
(+6 files in other folders)
